--- a/minhas_reservas.html
+++ b/minhas_reservas.html
@@ -41,6 +41,7 @@
 
         
     </style>
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -53,11 +54,8 @@
         // Função para obter salas reservadas (pode ser conectada a um banco de dados ou outra fonte de dados)
         function getSalasReservadas() {
             // Simulação de dados - você deve substituir isso com a lógica real
-            return [
-                { sala: 'Laboratório 1', data: '2023-11-15', horario: '10:00' },
-                { sala: 'Laboratório 2', data: '2023-11-16', horario: '14:00' },
-                // Adicione mais itens conforme necessário
-            ];
+            let dadosArmazenados = localStorage.getItem('reservas');
+            return JSON.parse(dadosArmazenados);
         }
 
         // Função para criar os cards de salas reservadas
@@ -68,7 +66,7 @@
             salasReservadas.forEach(reserva => {
                 const salaCard = document.createElement('div');
                 salaCard.classList.add('sala');
-                salaCard.innerHTML = `<p>Sala: ${reserva.sala}</p><p>Data: ${reserva.data}</p><p>Horário: ${reserva.horario}</p>`;
+                salaCard.innerHTML = `<p>Sala: ${reserva.lab}</p><p>Data: ${reserva.data}</p><p>Horário: ${reserva.horarioSelecionado}</p>`;
                 container.appendChild(salaCard);
             });
         }
