--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <label for="lab">Laboratório:</label>
         <select id="lab" name="lab" required>
             <option value="" disabled selected>Selecione o laboratório</option>
-            <option value="lab1">Laboratório de Informatica 1 </option>
-            <option value="lab2">Laboratório de Informatica 2 </option>
-            <option value="lab3">Laboratório de Eng. Software </option>
+            <option value="Laboratório de Informatica 1">Laboratório de Informatica 1 </option>
+            <option value="Laboratório de Informatica 2">Laboratório de Informatica 2 </option>
+            <option value="Laboratório de Eng. Software">Laboratório de Eng. Software </option>
         </select>
 
         <div class="container">
