--- a/minhas_reservas.html
+++ b/minhas_reservas.html
@@ -49,6 +49,9 @@
     <div class="container">
         <h2>Minhas Reservadas</h2>
         <div id="salasReservadas"></div>
+		<div>
+            <button id="cancreservarbtn" onclick="cancelarSala()">Cancelar reserva</button>
+        </div>
     </div>
 
     <script src="moment.js"></script>
