--- a/minhas_reservas.html
+++ b/minhas_reservas.html
@@ -38,6 +38,14 @@
             max-width: 70%; /* Largura máxima dos cards */
         }
   
+        button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
         
     </style>
