--- a/minhas_reservas.html
+++ b/minhas_reservas.html
@@ -27,6 +27,11 @@
             width: 100%; /* Garante que a largura seja 100% do espaço disponível */
         }
 
+            #salasReservadas{
+                width: 80%;
+                /* justify-content: center; */
+                margin: auto;
+            }
    
 
         .sala {
@@ -35,7 +40,7 @@
             border-radius: 4px;
             padding: 10px;
             margin: 10px;
-            max-width: 70%; /* Largura máxima dos cards */
+            max-width: 100%; /* Largura máxima dos cards */
         }
   
         button {
